Add machine translation

--- a/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-sns.adoc.po
@@ -360,8 +360,9 @@ msgstr "そして、SNS同期クライアント経由でSNSトピックにクォ
 
 #. type: Plain text
 #: upstream/_guides/amazon-sns.adoc:162
+#, fuzzy
 msgid "The `@RegisterForReflection` annotation instructs Quarkus to keep the class and its members during the native compilation. More details about the `@RegisterForReflection` annotation can be found on the xref:writing-native-applications-tips.adoc#registerForReflection[native application tips] page."
-msgstr ""
+msgstr "`@RegisterForReflection` アノテーションは、ネイティブコンパイル時にクラスとそのメンバーを保持するようQuarkusに指示します。 `@RegisterForReflection` アノテーションの詳細については、 link:writing-native-applications-tips.html#registerForReflection[ネイティブアプリケーションのヒント]のページを参照してください。"
 
 #. type: delimited block -
 #: upstream/_guides/amazon-sns.adoc:167 upstream/_guides/amazon-sns.adoc:471
