--- a/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi-reference.adoc.po
@@ -559,8 +559,9 @@ msgstr "ライフサイクルイベントコールバックのためのインタ
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:204
+#, fuzzy
 msgid "Decorators"
-msgstr ""
+msgstr "デコレーター"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:205
@@ -1760,14 +1761,15 @@ msgstr "他にも、異なるターゲットへのメソッド呼び出しをロ
 
 #. type: Title ===
 #: upstream/_guides/cdi-reference.adoc:787
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Caching the Result of Programmatic Lookup"
-msgstr ""
+msgstr "Programmatic Lookupの結果をキャッシュする"
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:797
+#, fuzzy
 msgid "In certain situations, it is practical to obtain a bean instance programmatically via an injected `javax.enterprise.inject.Instance` and `Instance.get()`.  However, according to the specification the `get()` method must identify the matching bean and obtain a contextual reference.  As a consequence, a new instance of a `@Dependent` bean is returned from each invocation of `get()`.  Moreover, this instance is a dependent object of the injected `Instance`.  This behavior is well-defined but it may lead to unexpected errors and memory leaks.  Therefore, Quarkus comes with the `io.quarkus.arc.WithCaching` annotation.  An injected `Instance` annotated with this annotation will cache the result of the `Instance#get()` operation.  The result is computed on the first call and the same value is returned for all subsequent calls, even for `@Dependent` beans."
-msgstr ""
+msgstr "特定の状況では，注入された `javax.enterprise.inject.Instance` および `Instance.get()` を介してプログラム的にBeanインスタンスを取得することが実用的である。しかし，仕様によれば， `get()` メソッドは，一致するBeanを識別し，文脈上の参照を取得しなければならない。その結果， `get()` の各呼び出しから， `@Dependent` Bean の新しいインスタンスが返される。さらに，このインスタンスは，注入された `Instance` の依存オブジェクトである。この動作は明確に定義されていますが、予期せぬエラーやメモリリークが発生する可能性があります。そのため、Quarkusには `io.quarkus.arc.WithCaching` というアノテーションが付いています。このアノテーションが付与された注入された `Instance` は、 `Instance#get()` の操作の結果をキャッシュします。結果は最初の呼び出しで計算され、その後のすべての呼び出しで同じ値が返されます（ `@Dependent` 豆の場合も同様です）。"
 
 #. type: delimited block -
 #: upstream/_guides/cdi-reference.adoc:801
@@ -1856,8 +1858,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/cdi-reference.adoc:842
+#, fuzzy
 msgid "It is also possible to clear the cached value via `io.quarkus.arc.InjectableInstance.clearCache()`. In this case, you'll need to inject the Quarkus-specific `io.quarkus.arc.InjectableInstance` instead of `javax.enterprise.inject.Instance`."
-msgstr ""
+msgstr "また、 `io.quarkus.arc.InjectableInstance.clearCache()` を通してキャッシュされた値をクリアすることも可能です。この場合、 `javax.enterprise.inject.Instance` の代わりに、Quarkus固有の `io.quarkus.arc.InjectableInstance` を注入する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/cdi-reference.adoc:844
