--- a/l10n/po/ja_JP/_guides/cdi.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi.adoc.po
@@ -869,14 +869,15 @@ msgstr "インターセプタのインスタンスは、インターセプトす
 
 #. type: Title ===
 #: upstream/_guides/cdi.adoc:383
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Decorators"
-msgstr ""
+msgstr "デコレーター"
 
 #. type: Plain text
 #: upstream/_guides/cdi.adoc:386
+#, fuzzy
 msgid "Decorators are similar to interceptors, but because they implement interfaces with business semantics, they are able to implement business logic."
-msgstr ""
+msgstr "デコレーターはインターセプターと似ていますが、ビジネスセマンティクスを持つインターフェイスを実装しているため、ビジネスロジックを実装することができます。"
 
 #. type: Block title
 #: upstream/_guides/cdi.adoc:387
@@ -960,23 +961,27 @@ msgstr "インターセプターコンポーネントをマークします。"
 
 #. type: Plain text
 #: upstream/_guides/cdi.adoc:424
+#, fuzzy
 msgid "The set of decorated types includes all bean types which are Java interfaces, except for `java.io.Serializable`."
-msgstr ""
+msgstr "装飾された型のセットには、 `java.io.Serializable` を除く、Java インターフェースであるすべての Bean 型が含まれます。"
 
 #. type: Plain text
 #: upstream/_guides/cdi.adoc:425
+#, fuzzy
 msgid "Each decorator must declare exactly one _delegate injection point_. The decorator applies to beans that are assignable to this delegate injection point."
-msgstr ""
+msgstr "各デコレーターは、正確に1つの _デリゲート・インジェクション・ポイント_を宣言する必要があります。デコレーターは、このデリゲート・インジェクション・ポイントに割り当て可能なビーンに適用されます。"
 
 #. type: Plain text
 #: upstream/_guides/cdi.adoc:426
+#, fuzzy
 msgid "Decorators can inject other beans."
-msgstr ""
+msgstr "デコレーターは、他の豆を注入することができます。"
 
 #. type: Plain text
 #: upstream/_guides/cdi.adoc:427
+#, fuzzy
 msgid "The decorator may invoke any method of the delegate object. And the container invokes either the next decorator in the chain or the business method of the intercepted instance."
-msgstr ""
+msgstr "デコレーターは、デリゲートオブジェクトの任意のメソッドを呼び出すことができます。そして、コンテナは、チェーンの次のデコレーターか、インターセプトされたインスタンスのビジネスメソッドを呼び出します。"
 
 #. type: Plain text
 #: upstream/_guides/cdi.adoc:429
