--- a/l10n/po/ja_JP/_guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_guides/datasource.adoc.po
@@ -173,8 +173,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/datasource.adoc:80
+#, fuzzy
 msgid "All services based on containers are ran using `testcontainers`. Even though extra URL properties can be set in your `application.properties` file, specific `testcontainers` properties such as `TC_INITSCRIPT`, `TC_INITFUNCTION`, `TC_DAEMON`, `TC_TMPFS` are not supported."
-msgstr ""
+msgstr "コンテナを利用したサービスはすべて、 `testcontainers` を利用して実行されます。 `application.properties` ファイルで追加の URL プロパティを設定することができますが、 `TC_INITSCRIPT` 、 `TC_INITFUNCTION` 、 `TC_DAEMON` 、 `TC_TMPFS` のような特定の `testcontainers` プロパティはサポートされていません。"
 
 #. type: Title ===
 #: upstream/_guides/datasource.adoc:82 upstream/_guides/datasource.adoc:172
