--- a/l10n/po/ja_JP/_guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm-panache.adoc.po
@@ -751,19 +751,21 @@ msgstr "残りのドキュメントでは、アクティブレコードパター
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm-panache.adoc:410
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Writing a JAX-RS resource"
-msgstr ""
+msgstr "JAX-RSリソースの記述"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:413
+#, fuzzy
 msgid "First, include one of the RESTEasy extensions to enable JAX-RS endpoints, for example, add the `io.quarkus:quarkus-resteasy-jackson` dependency for JAX-RS and JSON support."
-msgstr ""
+msgstr "まず、JAX-RSエンドポイントを有効にするために、RESTEasyの拡張機能の1つを含めます。例えば、JAX-RSとJSONのサポートのために、 `io.quarkus:quarkus-resteasy-jackson` の依存関係を追加します。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:415
+#, fuzzy
 msgid "Then, you can create the following resource to create/read/update/delete your Person entity:"
-msgstr ""
+msgstr "そして、以下のリソースを作成することで、Personエンティティの作成/読み取り/更新/削除を行うことができます。"
 
 #. type: delimited block -
 #: upstream/_guides/hibernate-orm-panache.adoc:422
@@ -879,8 +881,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:483
+#, fuzzy
 msgid "Be careful to use the `@Transactional` annotation on the operations that modify the database, you can add the annotation at the class level for simplicity purpose."
-msgstr ""
+msgstr "データベースを変更する操作には `@Transactional` アノテーションを使用するように注意してください。わかりやすくするために、クラスレベルでアノテーションを追加することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm-panache.adoc:484
@@ -1303,8 +1306,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:685
+#, fuzzy
 msgid "The `@RegisterForReflection` annotation instructs Quarkus to keep the class and its members during the native compilation. More details about the `@RegisterForReflection` annotation can be found on the xref:writing-native-applications-tips.adoc#registerForReflection[native application tips] page."
-msgstr ""
+msgstr "`@RegisterForReflection` アノテーションは、ネイティブコンパイル時にクラスとそのメンバーを保持するようQuarkusに指示します。 `@RegisterForReflection` アノテーションの詳細については、 link:writing-native-applications-tips.html#registerForReflection[ネイティブアプリケーションのヒント]のページを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:686
@@ -1815,14 +1819,15 @@ msgstr "`verify` と `do*` のメソッドは、必ず `Mockito` ではなく `P
 
 #. type: Title ====
 #: upstream/_guides/hibernate-orm-panache.adoc:954
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Mocking `EntityManager`, `Session` and entity instance methods"
-msgstr ""
+msgstr "`EntityManager`, `Session`, エンティティインスタンスメソッドのモッキング"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:957
+#, fuzzy
 msgid "If you need to mock entity instance methods, such as `persist()` you can do it by mocking the Hibernate ORM `Session` object:"
-msgstr ""
+msgstr "`persist()` のようなエンティティインスタンスのメソッドをモックする必要がある場合は、Hibernate ORM `Session` オブジェクトをモックすることで実現できます。"
 
 #. type: delimited block -
 #: upstream/_guides/hibernate-orm-panache.adoc:962
