--- a/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
@@ -261,8 +261,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:143
+#, fuzzy
 msgid "By default, the mock server will be in CRUD mode, so you have to use the client to build your state before your application can retrieve it, but you can also set it up in non-CRUD mode and mock all HTTP requests made to Kubernetes:"
-msgstr ""
+msgstr "デフォルトでは、モックサーバはCRUDモードになっているので、アプリケーションがステートを取得する前に、クライアントを使ってステートを構築する必要がありますが、非CRUDモードに設定して、KubernetesへのすべてのHTTPリクエストをモックすることもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:150
