--- a/l10n/po/ja_JP/_guides/lifecycle.adoc.po
+++ b/l10n/po/ja_JP/_guides/lifecycle.adoc.po
@@ -303,23 +303,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:137
+#, fuzzy
 msgid "Command line arguments can be passed to the application through the `-D` flag with the property `quarkus.args`:"
-msgstr ""
+msgstr "コマンドライン引数は、プロパティ `quarkus.args` で `-D` フラグを介してアプリケーションに渡すことができます。"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:139
+#, fuzzy
 msgid "For Quarkus dev mode: `./mvnw quarkus:dev -Dquarkus.args=<cmd-args>`"
-msgstr ""
+msgstr "Quarkus開発モードの場合。 `./mvnw quarkus:dev -Dquarkus.args=&amp;lt;cmd-args&amp;gt;`"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:140
+#, fuzzy
 msgid "For a runner jar: `java -Dquarkus.args=<cmd-args> -jar target/quarkus-app/quarkus-run.jar`"
-msgstr ""
+msgstr "ランナー・ジャーの場合 `java -Dquarkus.args=&amp;lt;cmd-args&amp;gt; -jar target/quarkus-app/quarkus-run.jar`"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:141
+#, fuzzy
 msgid "For a native executable: `./target/lifecycle-quickstart-1.0-SNAPSHOT-runner -Dquarkus.args=<cmd-args>`"
-msgstr ""
+msgstr "ネイティブの実行ファイルの場合 `./target/lifecycle-quickstart-1.0-SNAPSHOT-runner -Dquarkus.args=&amp;lt;cmd-args&amp;gt;`"
 
 #. type: Title ==
 #: upstream/_guides/lifecycle.adoc:142
