--- a/l10n/po/ja_JP/_guides/opentracing.adoc.po
+++ b/l10n/po/ja_JP/_guides/opentracing.adoc.po
@@ -212,8 +212,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:103
+#, fuzzy
 msgid "The log event carries OpenTracing information as well. In order to print OpenTracing information to the console output, the console log handler with the required OpenTracing event's keys needs to be defined in the `application.properties` file."
-msgstr ""
+msgstr "ログイベントは OpenTracing の情報も含んでいます。OpenTracing情報をコンソール出力に表示するためには、必要なOpenTracingイベントのキーを持つコンソール・ログ・ハンドラを `application.properties` ファイルで定義する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:108
