--- a/l10n/po/ja_JP/_guides/performance-measure.adoc.po
+++ b/l10n/po/ja_JP/_guides/performance-measure.adoc.po
@@ -142,25 +142,27 @@ msgstr "同様に、プロセスが使用している、他のプロセスと共
 
 #. type: Title ===
 #: upstream/_guides/performance-measure.adoc:54
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Measuring Memory Correctly on Docker"
-msgstr ""
+msgstr "Docker上で正しくメモリを測定する"
 
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:57
+#, fuzzy
 msgid "In order to measure memory correctly **DO NOT use docker stat or anything derived from it** (e.g. ctop). This approach only measures a subset of the in-use resident pages, while the Linux Kernel, cgroups and cloud orchestration providers will utilize the full resident set in their accounting (determining whether a process is over the limits and should be killed)."
-msgstr ""
+msgstr "メモリを正しく測定するためには、 *docker statやそれに由来するもの*（ctopなど） *を使用しないでください*。この方法では、使用中のレジデントページのサブセットしか測定できません。一方、Linuxカーネル、cgroups、およびクラウドオーケストレーションプロバイダは、アカウンティング（プロセスが制限を超えているかどうか、強制終了すべきかどうかの判断）に完全なレジデントセットを使用します。"
 
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:59
+#, fuzzy
 msgid "To measure accurately, a similar set of steps for measuring RSS on Linux should be performed. The docker `top` command allows running a `ps` command on the container host machine against the processes in the container instance. By utilizing this in combination with formatting output parameters, the rss value can be returned:"
-msgstr ""
+msgstr "正確に測定するためには、Linux上でRSSを測定するための同様の手順を実行する必要があります。docker `top` コマンドを使用すると、コンテナホストマシン上で、コンテナインスタンス内のプロセスに対して `ps` コマンドを実行することができます。これをフォーマットされた出力パラメータと組み合わせて利用することで、rssの値を返すことができます。"
 
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:61
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "  docker top <CONTAINER ID> -o pid,rss,args\n"
-msgstr ""
+msgstr "<pre>docker top &lt;CONTAINER ID&gt; -o pid,rss,args</pre>"
 
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:63
@@ -183,8 +185,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:73
+#, fuzzy
 msgid "Alternatively, one can jump directly into a privileged shell (root on the host), and execute a `ps` command directly:"
-msgstr ""
+msgstr "また、特権シェル（ホスト上のルート）に直接ジャンプして、 `ps` コマンドを直接実行することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/performance-measure.adoc:78
@@ -196,14 +199,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:81
+#, fuzzy
 msgid "If you happen to be running on Linux, you can execute the `ps` command directly, since your shell is the same as the container host:"
-msgstr ""
+msgstr "Linuxを使用している場合は、シェルがコンテナホストと同じであるため、 `ps` コマンドを直接実行することができます。"
 
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:83
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "  ps -e -o pid,rss,args | grep application\n"
-msgstr ""
+msgstr "<pre>ps -e -o pid,rss,args | grep application</pre>"
 
 #. type: Title ===
 #: upstream/_guides/performance-measure.adoc:84
