--- a/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
@@ -545,8 +545,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:295
+#, fuzzy
 msgid "For PostgreSQL, the SQL string can refer to parameters by position, using `$1`, `$2`, ...etc.  Please refer to the <<Database Clients details>> section for other databases."
-msgstr ""
+msgstr "PostgreSQLでは、 `$1`, `$2`, ...などのように、SQL文字列でパラメータを位置ごとに参照することができます。その他のデータベースについては、 link:#Database Clients details[「データベースクライアントの詳細]」をご参照ください。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:298
@@ -894,9 +895,9 @@ msgstr "プールクラス名"
 
 #. type: Table
 #: upstream/_guides/reactive-sql-clients.adoc:475
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Placeholders"
-msgstr ""
+msgstr "プレースホルダー"
 
 #. type: Table
 #: upstream/_guides/reactive-sql-clients.adoc:477
@@ -913,9 +914,9 @@ msgstr "`io.vertx.mutiny.db2client.DB2Pool`"
 #. type: Table
 #: upstream/_guides/reactive-sql-clients.adoc:480
 #: upstream/_guides/reactive-sql-clients.adoc:485
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`?`"
-msgstr ""
+msgstr "`?`"
 
 #. type: Table
 #: upstream/_guides/reactive-sql-clients.adoc:482
@@ -943,9 +944,9 @@ msgstr "`io.vertx.mutiny.pgclient.PgPool`"
 
 #. type: Table
 #: upstream/_guides/reactive-sql-clients.adoc:489
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`$1`, `$2`, etc."
-msgstr ""
+msgstr "`$1`, `$2`, など。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-sql-clients.adoc:491
