--- a/l10n/po/ja_JP/_guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client.adoc.po
@@ -852,8 +852,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:559
+#, fuzzy
 msgid "As you see in the example above, you can make your the `ClientHeadersFactory` implementation a CDI bean by annotating it with a scope-defining annotation, such as `@Singleton`, `@ApplicationScoped`, etc."
-msgstr ""
+msgstr "上の例のように、 `@Singleton`, `@ApplicationScoped` などのスコープを定義するアノテーションを付けることで、 `ClientHeadersFactory` の実装をCDI Beanにすることができます。"
 
 #. type: Title ===
 #: upstream/_guides/rest-client.adoc:561
