--- a/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
@@ -104,8 +104,9 @@ msgstr "CRON 式で使用される構文は `quarkus.scheduler.cron-type` プロ
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:59
+#, fuzzy
 msgid "The `cron` attribute supports <<config-reference#using_property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that \"{property.path}\" style expressions are still supported but don't offer the full functionality of Property Expressions.)"
-msgstr ""
+msgstr "`cron` 属性は、デフォルト値やネストされたProperty Expressionを含む link:config-reference.html#using_property_expressions[Property]Expressionをサポートしています。(なお、\"{property.path}\"スタイルの表現もサポートされていますが、Property Expressionsの完全な機能は提供されていません)。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:61
@@ -123,8 +124,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:69
+#, fuzzy
 msgid "If you wish to disable a specific scheduled method, you can set its cron expression to `\"off\"` or `\"disabled\"`."
-msgstr ""
+msgstr "特定のスケジュールメソッドを無効にしたい場合は、そのcron式を `\"off\"` または `\"disabled\"` に設定します。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:70
@@ -140,8 +142,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:77
+#, fuzzy
 msgid "Property Expressions allow you to define a default value that is used, if the property is not configured."
-msgstr ""
+msgstr "プロパティ式では、そのプロパティが構成されていない場合に使用されるデフォルト値を定義することができます。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:78
@@ -160,8 +163,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:86
+#, fuzzy
 msgid "If the property `myMethod.cron.expr` is undefined or `null`, the default value (`0 0 15 ? * MON *`) will be used."
-msgstr ""
+msgstr "プロパティ `myMethod.cron.expr` が未定義または `null` の場合は、デフォルト値（ `0 0 15 ? * MON *` ）が使用されます。"
 
 #. type: Title ====
 #: upstream/_guides/scheduler-reference.adoc:87
@@ -190,8 +194,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:103
+#, fuzzy
 msgid "The `every` attribute supports <<config-reference#using_property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
-msgstr ""
+msgstr "`every` 属性は、デフォルト値やネストされたProperty Expressionを含む link:config-reference.html#using_property_expressions[Property]Expressionをサポートしています。(なお、 `\"{property.path}\"` スタイル式はサポートされていますが、Property Expressionsの完全な機能は提供されていません)。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:104
@@ -210,8 +215,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:113
+#, fuzzy
 msgid "Intervals can be disabled by setting their value to `\"off\"` or `\"disabled\"`.  So for example a Property Expression with the default value `\"off\"` can be used to disable the trigger if its Config Property has not been set."
-msgstr ""
+msgstr "Intervals は、その値を `\"off\"` または `\"disabled\"` に設定することで無効にすることができます。そのため、例えば、デフォルト値 `\"off\"` のProperty Expressionは、そのConfig Propertyが設定されていない場合、トリガーを無効にするために使用することができます。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:114
@@ -255,8 +261,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:137
+#, fuzzy
 msgid "The `identity` attribute supports <<config-reference#using_property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
-msgstr ""
+msgstr "`identity` 属性は、デフォルト値やネストされたProperty Expressionを含む link:config-reference.html#using_property_expressions[Property]Expressionをサポートしています。(なお、 `\"{property.path}\"` スタイル式はサポートされていますが、Property Expressionsの完全な機能は提供されていません)。"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler-reference.adoc:143
@@ -322,8 +329,9 @@ msgstr "`@Scheduled#delay()` がゼロよりも大きい値に設定されてい
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:176
+#, fuzzy
 msgid "The main advantage over `@Scheduled#delay()` is that the value is configurable.  The `delay` attribute supports <<config-reference#using_property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
-msgstr ""
+msgstr "`@Scheduled#delay()` と比較した場合の主な利点は、値が設定可能であることです。 `delay` 属性は、デフォルト値やネストされたProperty Expressionを含む link:config-reference.html#using_property_expressions[Property]Expressionをサポートしています。(なお、 `\"{property.path}\"` スタイルの表現はサポートされていますが、Property Expressionsの完全な機能は提供されていません)。"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler-reference.adoc:182
@@ -432,13 +440,15 @@ msgstr "すべてのトリガーを一時停止します。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:229
+#, fuzzy
 msgid "Pause a specific scheduled method by its identity"
-msgstr ""
+msgstr "特定のスケジューリングされたメソッドをそのIDで一時停止する"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:230
+#, fuzzy
 msgid "Resume a specific scheduled method by its identity"
-msgstr ""
+msgstr "スケジュールされた特定のメソッドを、そのIDで再開する"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:231
