--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -1892,13 +1892,15 @@ msgstr "プロアクティブ認証"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:779
+#, fuzzy
 msgid "If you'd like to skip the token verification when the public endpoint methods are invoked then please disable the link:security-built-in-authentication#proactive-authentication[proactive authentication]."
-msgstr ""
+msgstr "パブリックエンドポイントのメソッドを呼び出す際に、トークンの検証を省略したい場合は、 link:security-built-in-authentication#proactive-authentication[プロアクティブ認証]を無効にしてください。"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:781
+#, fuzzy
 msgid "Note that you can't access the injected `JsonWebToken` in the public methods if the token verification has not been done."
-msgstr ""
+msgstr "トークンの検証が行われていない場合、パブリックメソッドで注入された `JsonWebToken` にアクセスできないことに注意してください。"
 
 #. type: Title ==
 #: upstream/_guides/security-jwt.adoc:782
@@ -2013,9 +2015,9 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-jwt.adoc:845
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Keycloak"
-msgstr ""
+msgstr "キークローク"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:848
@@ -2054,14 +2056,15 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-jwt.adoc:872
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "TestSecurity annotation"
-msgstr ""
+msgstr "TestSecurityアノテーション"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:875
+#, fuzzy
 msgid "Add the following dependency:"
-msgstr ""
+msgstr "以下の依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:882
@@ -2076,8 +2079,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:885
+#, fuzzy
 msgid "and write a test code like this one:"
-msgstr ""
+msgstr "のようなテストコードを書いてみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:896
@@ -2137,8 +2141,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:922
+#, fuzzy
 msgid "where `ProtectedResource` class may look like this:"
-msgstr ""
+msgstr "`ProtectedResource` のクラスは次のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:928
@@ -2183,8 +2188,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:949
+#, fuzzy
 msgid "Note that `@TestSecurity` annotation must always be used and its `user` property is returned as `JsonWebToken.getName()` and `roles` property - as `JsonWebToken.getGroups()`.  `@JwtSecurity` annotation is optional and can be used to set the additional token claims."
-msgstr ""
+msgstr "`@TestSecurity` アノテーションは必ず使用する必要があり、その `user` プロパティは `JsonWebToken.getName()` として、 `roles` プロパティは - `JsonWebToken.getGroups()` として返されることに注意してください。 `@JwtSecurity` アノテーションはオプションで、追加のトークン クレームを設定するために使用できます。"
 
 #. type: Title ==
 #: upstream/_guides/security-jwt.adoc:951
@@ -2351,8 +2357,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:1034
+#, fuzzy
 msgid "Note the `alg` (algorithm) header is set to `RS256` by default and `keyId` (key identifier) does not have to be set if a single JSON Web Key (JWK) containing a `kid` property is used."
-msgstr ""
+msgstr "なお、 `alg` （アルゴリズム）ヘッダーは、デフォルトで `RS256` に設定され、 `keyId` （キー識別子）は、 `kid` プロパティを含む単一の JSON Web Key（JWK）を使用する場合は設定する必要がありません。"
 
 #. type: Title ===
 #: upstream/_guides/security-jwt.adoc:1035
@@ -2492,9 +2499,9 @@ msgstr "smallrye.jwt.sign.key-location"
 
 #. type: Table
 #: upstream/_guides/security-jwt.adoc:1092
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Signing key identifier which is checked only when JWK keys are used."
-msgstr ""
+msgstr "JWKキーが使用される場合にのみチェックされる署名キーの識別子。"
 
 #. type: Table
 #: upstream/_guides/security-jwt.adoc:1092
@@ -2517,9 +2524,9 @@ msgstr "smallrye.jwt.encrypt.key-location"
 
 #. type: Table
 #: upstream/_guides/security-jwt.adoc:1094
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Encryption key identifier which is checked only when JWK keys are used."
-msgstr ""
+msgstr "JWKキーを使用する場合にのみチェックされる暗号化キーの識別子。"
 
 #. type: Table
 #: upstream/_guides/security-jwt.adoc:1094
