--- a/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
@@ -42,8 +42,9 @@ msgstr "アプリケーションから認証を外部化することで、異な
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:19
+#, fuzzy
 msgid "See the link:security-openid-connect[Using OpenID Connect to Protect Service Applications] guide for more information about `Bearer Token` authentication mechanism. It is important to realize that it is the `Bearer Token` authentication mechanism which does the authentication and creates a security identity - while the `quarkus-keycloak-authorization` extension is responsible for applying a Keycloak Authorization Policy to this identity based on the current request path and other policy settings."
-msgstr ""
+msgstr "`Bearer Token` 認証メカニズムの詳細については、ガイド「 link:security-openid-connect[Using OpenID Connect to Protect Service]Applications」を参照してください。認証を行い、セキュリティIDを作成するのは、 `Bearer Token` 認証メカニズムであり、一方、 `quarkus-keycloak-authorization` 拡張機能は、現在のリクエストパスやその他のポリシー設定に基づいて、このIDにKeycloak Authorization Policyを適用する責任があることを認識することが重要です。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:22
@@ -644,14 +645,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-keycloak-authorization.adoc:334
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Injecting the Authorization Client"
-msgstr ""
+msgstr "認証クライアントのインジェクション"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:339
+#, fuzzy
 msgid "In some cases, you may want to use the https://www.keycloak.org/docs/latest/authorization_services/#_service_client_api[Keycloak Authorization Client Java API] to perform specific operations like managing resources and obtaining permissions directly from Keycloak. For that, you can inject a `AuthzClient` instance into your beans as follows:"
-msgstr ""
+msgstr "場合によっては、 link:https://www.keycloak.org/docs/latest/authorization_services/#_service_client_api[Keycloak Authorization Client Java API]を使用して、Keycloakから直接リソースの管理や権限の取得などの特定の操作を行いたいこともあるでしょう。そのためには、以下のように `AuthzClient` インスタンスをビーンズに注入します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-keycloak-authorization.adoc:346
@@ -711,19 +713,21 @@ msgstr "`@RolesAllowed` アノテーションまたは `application.properties` 
 
 #. type: Title ==
 #: upstream/_guides/security-keycloak-authorization.adoc:367
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Access to Public Resources"
-msgstr ""
+msgstr "公共資源へのアクセス"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:370
+#, fuzzy
 msgid "If you'd like to access a public resource without `quarkus-keycloak-authorization` trying to apply its policies to it then you need to create a `permit` HTTP Policy configuration in `application.properties` as documented in the link:security-authorization[Security Authorization] guide."
-msgstr ""
+msgstr "`quarkus-keycloak-authorization` のポリシーを適用せずにパブリックリソースにアクセスしたい場合は、「 link:security-authorization[Security Authorization]」ガイドで説明されているように、 `application.properties` で `permit` HTTP Policy の設定を作成する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:372
+#, fuzzy
 msgid "Disabling a policy check using a Keycloak Authorization Policy such as:"
-msgstr ""
+msgstr "などのKeycloak Authorization Policyを使ったポリシーチェックを無効にします。"
 
 #. type: delimited block -
 #: upstream/_guides/security-keycloak-authorization.adoc:377
@@ -735,13 +739,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:380
+#, fuzzy
 msgid "is no longer required."
-msgstr ""
+msgstr "はもう必要ありません。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:382
+#, fuzzy
 msgid "If you'd like to block an access to the public resource to anonymous users then you can create an enforcing Keycloak Authorization Policy:"
-msgstr ""
+msgstr "匿名ユーザのパブリックリソースへのアクセスをブロックしたい場合は、強制力のあるKeycloak Authorization Policyを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-keycloak-authorization.adoc:387
@@ -753,19 +759,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:390
+#, fuzzy
 msgid "Note only the default tenant configuration applies when controlling an anonymous access to the public resource is required."
-msgstr ""
+msgstr "なお、パブリックリソースへの匿名のアクセスを制御する必要がある場合は、デフォルトのテナント設定のみが適用されます。"
 
 #. type: Title ==
 #: upstream/_guides/security-keycloak-authorization.adoc:391
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Multi-Tenancy"
-msgstr ""
+msgstr "Multi-Tenancy"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:394
+#, fuzzy
 msgid "It is possible to configure multiple policy enforcer configurations, one per each tenant, similarly to how it can be done for link:security-openid-connect-multitenancy[Multi-Tenant OpenId Connect Service Applications]."
-msgstr ""
+msgstr "link:security-openid-connect-multitenancy[Multi-Tenant OpenId Connect Service Application]の場合と同様に、各テナントごとに複数のポリシーエンフォーサーを設定することが可能です。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:396
