--- a/l10n/po/ja_JP/_guides/security.adoc.po
+++ b/l10n/po/ja_JP/_guides/security.adoc.po
@@ -504,8 +504,9 @@ msgstr "認証メカニズムの組み合わせ"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:211
+#, fuzzy
 msgid "You can enforce that only a single authentication mechanism is selected for a given request path, for example:"
-msgstr ""
+msgstr "例えば、指定されたリクエストパスに対して、単一の認証メカニズムのみを選択することを強制することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security.adoc:215
@@ -535,8 +536,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:226
+#, fuzzy
 msgid "The value of the `auth-mechanism` property must match the authentication scheme supported by HttpAuthenticationMechanism such as `basic` or `bearer` or `form`, etc."
-msgstr ""
+msgstr "`auth-mechanism` プロパティの値は、 `basic` や `bearer` や `form` など、HttpAuthenticationMechanism がサポートする認証スキームと一致する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/security.adoc:227
@@ -662,8 +664,9 @@ msgstr "NVD CPEチームには、リストの更新と、Quarkus CPE名のエン
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:273
+#, fuzzy
 msgid "Note link:https://jeremylong.github.io/DependencyCheck/dependency-check-maven/[OWASP Dependency Check Plugin] `6.2.0` or later should be used with Quarkus."
-msgstr ""
+msgstr "注記 link:https://jeremylong.github.io/DependencyCheck/dependency-check-maven/[OWASP Dependency Check Plugin] `6.2.0` 以降をQuarkusと併用してください。"
 
 #~ msgid "OpenId Connect, JWT, OAuth2"
 #~ msgstr "OpenId Connect, JWT, OAuth2"
