--- a/l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po
@@ -274,8 +274,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:135
+#, fuzzy
 msgid "For readability we use classes with public fields, but classes with private fields with public getters and setters will also work."
-msgstr ""
+msgstr "読みやすくするためにpublicなフィールドを持つクラスを使用していますが、publicなゲッターとセッターを持つprivateなフィールドを持つクラスも使用できます。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:138
@@ -693,8 +694,9 @@ msgstr "`@Query` のアノテーションで値を除外していることに注
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:361
+#, fuzzy
 msgid "This query will allow the client to retrieve the film by id, and the `@Name` annotation on the parameter changes the parameter name to `filmId` rather than the default `id` that it would be if you omit the `@Name` annotation."
-msgstr ""
+msgstr "このクエリでは、クライアントが映画をIDで検索することができます。また、パラメータに `@Name` のアノテーションを付けると、パラメータ名が `@Name` のアノテーションを省略した場合のデフォルトの `id` ではなく、 `filmId` に変更されます。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:363
@@ -1004,24 +1006,27 @@ msgstr "`createHero` の mutation 法と同様に、 `{ }` で定義されてい
 
 #. type: Title ==
 #: upstream/_guides/smallrye-graphql.adoc:578
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Subscriptions"
-msgstr ""
+msgstr "サブスクリプション"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:581
+#, fuzzy
 msgid "Subscriptions allows you to subscribe to a query. It allows you to receive events."
-msgstr ""
+msgstr "Subscriptionsでは、クエリを購読することができます。イベントを受信することができます。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:583
+#, fuzzy
 msgid "Subscription is currently still considered experimental."
-msgstr ""
+msgstr "サブスクリプションは現在、実験的なものとされています。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:585
+#, fuzzy
 msgid "Example: We want to know when new Heroes are being created:"
-msgstr ""
+msgstr "例新しいヒーローが誕生するタイミングを知りたい。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:590
@@ -1053,23 +1058,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:606
+#, fuzzy
 msgid "The `Multi` processor that will broadcast any new Heros"
-msgstr ""
+msgstr "新しいHerosを放送する `Multi` プロセッサ"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:607
+#, fuzzy
 msgid "When adding a new Hero, also broadcast it"
-msgstr ""
+msgstr "新しいヒーローを追加する際には、ブロードキャストでも"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:608
+#, fuzzy
 msgid "Make the stream available in the schema and as a WebSocket during runtime"
-msgstr ""
+msgstr "実行時にスキーマやWebSocketとしてストリームを利用できるようにする"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:611
+#, fuzzy
 msgid "Any client that now connect to the `/graphql` WebSocket connection will receive events on new Heroes being created:"
-msgstr ""
+msgstr "現在、 `/graphql` WebSocket接続に接続しているすべてのクライアントは、新しいHeroが作成されたときにイベントを受け取ります。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:621
@@ -1155,8 +1164,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:673
+#, fuzzy
 msgid "or as a parameter in your method if you are in the `GraphQLApi` class, for instance:"
-msgstr ""
+msgstr "または、 `GraphQLApi` クラスであれば、メソッドのパラメータとして使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:681
@@ -1264,8 +1274,9 @@ msgstr "`@Observer` を使用することで、スキーマビルダーに何か
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:724
+#, fuzzy
 msgid "For the Observer to work, you need to enable events. In `application.properties`, add the following: `quarkus.smallrye-graphql.events.enabled=true`."
-msgstr ""
+msgstr "Observerを動作させるには、イベントを有効にする必要があります。 `application.properties` で、以下を追加します。 `quarkus.smallrye-graphql.events.enabled=true` 。"
 
 #. type: Title ==
 #: upstream/_guides/smallrye-graphql.adoc:725
