--- a/l10n/po/ja_JP/_guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault.adoc.po
@@ -112,8 +112,9 @@ msgstr "Vaultの起動"
 
 #. type: delimited block =
 #: upstream/_guides/vault.adoc:51
+#, fuzzy
 msgid "Using <<dev-services,DevServices>>, Quarkus will take care of starting Vault in dev and test mode."
-msgstr ""
+msgstr "link:#dev-services[DevServices]を使用することで、QuarkusはdevおよびtestモードでのVaultの起動を担当します。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:54
@@ -508,8 +509,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/vault.adoc:289
+#, fuzzy
 msgid "Using <<dev-services,DevServices>>, Quarkus will take care of configuring the Vault connection in dev and test mode."
-msgstr ""
+msgstr "link:#dev-services[DevServices]を使用することで、QuarkusはdevおよびtestモードでのVault接続の設定を行います。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:292
@@ -1017,40 +1019,45 @@ msgstr "特定のユースケースに応じて、アクセス権の最小セッ
 
 #. type: Title ==
 #: upstream/_guides/vault.adoc:522
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "DevServices (Configuration Free Vault)"
-msgstr ""
+msgstr "DevServices (Configuration Free Vault)"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:528
+#, fuzzy
 msgid "Quarkus supports a feature called DevServices that allows you to create various containers without any config.  What that means in practice is that if you have Docker running and have not configured `quarkus.vault.url`, Quarkus will automatically start a Vault container when running tests or in dev mode, and automatically configure the connection."
-msgstr ""
+msgstr "QuarkusはDevServicesという機能をサポートしており、設定なしで様々なコンテナを作成することができます。実際にどういうことかというと、Dockerを起動していて、 `quarkus.vault.url` を設定していない場合、Quarkusはテスト実行時やdevモード時に自動的にVaultコンテナを起動し、自動的に接続を設定します。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:532
+#, fuzzy
 msgid "When running the production version of the application, the Vault connection needs to be configured as normal, so if you want to include a production Vault config in your `application.properties` and continue to use DevServices we recommend that you use the `%prod.` profile to define your Vault connection settings."
-msgstr ""
+msgstr "そのため、本番用の Vault 設定を `application.properties` に含めて、引き続き DevServices を使用したい場合は、 `%prod.` プロファイルを使用して Vault 接続設定を定義することをお勧めします。"
 
 #. type: Title ===
 #: upstream/_guides/vault.adoc:533
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Automatic Secret Engine Provisioning"
-msgstr ""
+msgstr "シークレットエンジンの自動プロビジョニング"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:536
+#, fuzzy
 msgid "To help with provisioning the automatically managed Vault instance, you can enable certain secret engines."
-msgstr ""
+msgstr "自動的に管理されるVaultインスタンスのプロビジョニングを支援するために、特定のシークレットエンジンを有効にすることができます。"
 
 #. type: delimited block =
 #: upstream/_guides/vault.adoc:541
+#, fuzzy
 msgid "As mentioned above Vault containers started in dev mode automatically mount the _kv secret engine v2_ at `secret/`."
-msgstr ""
+msgstr "前述の通り、devモードで起動したVaultコンテナは、自動的に _kv secret engine v2_を `secret/` にマウントします。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:544
+#, fuzzy
 msgid "Enable the **Transit Secret Engine** at `transit/` using:"
-msgstr ""
+msgstr "`transit/` を使って *Transit Secret Engine*を有効にします。"
 
 #. type: delimited block -
 #: upstream/_guides/vault.adoc:548
@@ -1060,8 +1067,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:551
+#, fuzzy
 msgid "Enable the **PKI Secret Engine** at `pki/` using:"
-msgstr ""
+msgstr "`pki/` を使用して、 *PKI Secret Engine*を有効にします。"
 
 #. type: delimited block -
 #: upstream/_guides/vault.adoc:555
