--- a/l10n/po/ja_JP/_guides/kafka-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-dev-services.adoc.po
@@ -21,79 +21,90 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/kafka-dev-services.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Dev Services for Kafka"
-msgstr ""
+msgstr "Kafkaのための開発サービス"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:13
+#, fuzzy
 msgid "If any Kafka-related extension is present (e.g. `quarkus-smallrye-reactive-messaging-kafka`), Dev Services for Kafka automatically starts a Kafka broker in dev mode and when running tests.  So, you don't have to start a broker manually.  The application is configured automatically."
-msgstr ""
+msgstr "Kafka関連の拡張機能（例： `quarkus-smallrye-reactive-messaging-kafka` ）が存在する場合、Dev Services for Kafkaは、開発モードやテストの実行時に自動的にKafkaブローカーを起動します。そのため、ブローカーを手動で起動する必要はありません。アプリケーションは自動的に構成されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:15
+#, fuzzy
 msgid "Because starting a Kafka broker can be long, Dev Services for Kafka uses https://vectorized.io/redpanda[Redpanda], a Kafka compatible broker which starts in ~1 second."
-msgstr ""
+msgstr "Kafkaブローカーの起動には時間がかかるため、Dev Services for Kafkaでは、1秒程度で起動するKafka互換ブローカーの link:https://vectorized.io/redpanda[Redpanda]を使用しています。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-dev-services.adoc:16
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Enabling / Disabling Dev Services for Kafka"
-msgstr ""
+msgstr "KafkaのDevサービスの有効化／無効化"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:19
+#, fuzzy
 msgid "Dev Services for Kafka is automatically enabled unless:"
-msgstr ""
+msgstr "Dev Services for Kafkaが自動的に有効になります。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:21
+#, fuzzy
 msgid "`quarkus.kafka.devservices.enabled` is set to `false`"
-msgstr ""
+msgstr "`quarkus.kafka.devservices.enabled` が設定されています。 `false`"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:22
+#, fuzzy
 msgid "the `kafka.bootstrap.servers` is configured"
-msgstr ""
+msgstr "`kafka.bootstrap.servers` の設定"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:23
+#, fuzzy
 msgid "all the Reactive Messaging Kafka channels have the `bootstrap.servers` attribute set"
-msgstr ""
+msgstr "すべてのReactive Messaging Kafkaチャンネルには `bootstrap.servers` 属性が設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:27
+#, fuzzy
 msgid "Dev Services for Kafka relies on Docker to start the broker.  If your environment does not support Docker, you will need to start the broker manually, or connect to an already running broker.  You can configure the broker address using `kafka.bootstrap.servers`."
-msgstr ""
+msgstr "Dev Services for Kafkaでは、ブローカーの起動にDockerを使用しています。お使いの環境でDockerがサポートされていない場合は、ブローカーを手動で起動するか、すでに稼働しているブローカーに接続する必要があります。ブローカーのアドレスは、 `kafka.bootstrap.servers` を使用して設定できます。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-dev-services.adoc:28
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Setting the port"
-msgstr ""
+msgstr "ポートの設定"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:32
+#, fuzzy
 msgid "By default, Dev Services for Kafka picks a random port and configure the application.  You can set the port by configuring the `quarkus.kafka.devservices.port` property."
-msgstr ""
+msgstr "デフォルトでは、Dev Services for Kafka はランダムなポートを選択してアプリケーションを構成します。ポートは、 `quarkus.kafka.devservices.port` プロパティを構成することで設定できます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:34
+#, fuzzy
 msgid "Note that the Kafka advertised address is automatically configured with the chosen port."
-msgstr ""
+msgstr "Kafkaのアドバタイズドアドレスは、選択したポートで自動的に設定されることに注意してください。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-dev-services.adoc:35
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Configuring the image"
-msgstr ""
+msgstr "イメージの設定"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:39
+#, fuzzy
 msgid "By default, Dev Services for Kafka uses: `vectorized/redpanda:latest`.  You can select any version from https://hub.docker.com/r/vectorized/redpanda."
-msgstr ""
+msgstr "デフォルトでは、Dev Services for Kafkaは、 `vectorized/redpanda:latest` を使用します。 https://hub.docker.com/r/vectorized/redpanda  から任意のバージョンを選択することができます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:40
+#, fuzzy
 msgid "Dev Services for Kafka only support Redpanda."
-msgstr ""
+msgstr "Dev Services for KafkaはRedpandaのみ対応しています。"
