--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -180,8 +180,9 @@ msgstr "スタティック初期化"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:75
+#, fuzzy
 msgid "If the extension provides additional Config Sources and if these are required during Static Init, these must be registered with `AdditionalStaticInitConfigSourceProviderBuildItem`. Configuration in Static Init does not scan for additional sources to avoid double initialization at application startup time."
-msgstr ""
+msgstr "拡張機能が追加のコンフィグソースを提供し、それらがStatic Init中に必要な場合は、それらを `AdditionalStaticInitConfigSourceProviderBuildItem` に登録する必要があります。Static Initでの設定は、アプリケーション起動時の二重初期化を避けるために、追加のソースをスキャンしません。"
 
 #
 #
